force-app/main/default/objects/Opportunity/fields/Agent_Distributor_Margin__c.field-meta.xml
<CustomField>
    <fullName>Agent_Distributor_Margin__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Agent/Distributor Margin</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>