force-app/main/default/objects/Opportunity/fields/Capsule_Type__c.field-meta.xml
<CustomField>
    <fullName>Capsule_Type__c</fullName>
    <label>Capsule Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Capsule_Types</valueSetName>
    </valueSet>
</CustomField>