force-app/main/default/objects/Opportunity/fields/Cash_Discount__c.field-meta.xml
<CustomField>
    <fullName>Cash_Discount__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Cash Discount</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>