force-app/main/default/objects/Opportunity/fields/Expected_Volume_in_Capsules__c.field-meta.xml
<CustomField>
    <fullName>Expected_Volume_in_Capsules__c</fullName>
    <inlineHelpText>The value in this field will be overwritten if you add products to the opportunity</inlineHelpText>
    <label>Expected Volume in Capsules</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>