force-app/main/default/objects/Opportunity/fields/Icon__c.field-meta.xml
<CustomField>
    <fullName>Icon__c</fullName>
    <formula>IMAGE(&quot;/resource/opportunityIcons/&quot;&amp;RecordType.DeveloperName&amp;&quot;.png&quot;,RecordType.Name,20,20)</formula>
    <label>Icon</label>
    <type>Text</type>
</CustomField>