force-app/main/default/objects/Opportunity/fields/Listing_Fees__c.field-meta.xml
<CustomField>
    <fullName>Listing_Fees__c</fullName>
    <label>Listing Fees</label>
    <type>TextArea</type>
</CustomField>