force-app/main/default/objects/Opportunity/fields/Logistic_Cost__c.field-meta.xml
<CustomField>
    <fullName>Logistic_Cost__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Logistic Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>