force-app/main/default/objects/Opportunity/fields/Price_per_Sleeve__c.field-meta.xml
<CustomField>
    <fullName>Price_per_Sleeve__c</fullName>
    <description>Sleeves always contain 10 Capsules.</description>
    <label>Price per Sleeve</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>