force-app/main/default/objects/Opportunity/fields/Pricing_Structure__c.field-meta.xml
<CustomField>
    <fullName>Pricing_Structure__c</fullName>
    <label>Pricing Structure</label>
    <type>TextArea</type>
</CustomField>