force-app/main/default/objects/Opportunity/fields/Retail_Margin__c.field-meta.xml
<CustomField>
    <fullName>Retail_Margin__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Retail Margin</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>