force-app/main/default/objects/Opportunity/fields/RSP_Promo__c.field-meta.xml
<CustomField>
    <fullName>RSP_Promo__c</fullName>
    <defaultValue>0</defaultValue>
    <label>RSP Promo</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>