force-app/main/default/objects/Opportunity/fields/Tender__c.field-meta.xml
<CustomField>
    <fullName>Tender__c</fullName>
    <defaultValue>&quot;No&quot;</defaultValue>
    <label>Tender</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>