force-app/main/default/objects/Opportunity/fields/Tender_Duration_Months__c.field-meta.xml
<CustomField>
    <fullName>Tender_Duration_Months__c</fullName>
    <label>Tender Duration (Months)</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>