force-app/main/default/objects/Opportunity/recordTypes/Distributor.recordType-meta.xml
<RecordType>
    <fullName>Distributor</fullName>
    <active>true</active>
    <businessProcess>Default</businessProcess>
    <label>Distributor</label>
</RecordType>