force-app/main/default/objects/Opportunity/recordTypes/E_commerce.recordType-meta.xml
<RecordType>
    <fullName>E_commerce</fullName>
    <active>true</active>
    <businessProcess>Default</businessProcess>
    <label>E-commerce</label>
</RecordType>