force-app/main/default/objects/Opportunity/recordTypes/Hotel.recordType-meta.xml
<RecordType>
    <fullName>Hotel</fullName>
    <active>true</active>
    <businessProcess>Default</businessProcess>
    <label>Hotel</label>
</RecordType>