force-app/main/default/objects/Opportunity/recordTypes/Other.recordType-meta.xml
<RecordType>
    <fullName>Other</fullName>
    <active>true</active>
    <businessProcess>Default</businessProcess>
    <label>Other</label>
</RecordType>