force-app/main/default/objects/Opportunity/recordTypes/Retail_Brand.recordType-meta.xml
<RecordType>
    <fullName>Retail_Brand</fullName>
    <active>true</active>
    <businessProcess>Default</businessProcess>
    <label>Retail - Brand</label>
</RecordType>