force-app/main/default/objects/Opportunity/recordTypes/Retail_Private_Label.recordType-meta.xml
<RecordType>
    <fullName>Retail_Private_Label</fullName>
    <active>true</active>
    <businessProcess>Default</businessProcess>
    <label>Retail - Private Label</label>
</RecordType>